--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
 #    -   id: no-commit-to-branch  # no commit to main, master
 #        args: ['--branch', 'main',]
     -   id: end-of-file-fixer
-    -   id: double-quote-string-fixer
+#    -   id: double-quote-string-fixer
     -   id: requirements-txt-fixer
 
 -   repo: https://github.com/pycqa/isort
